main/default/objects/Single_Number_Service__c/Single_Number_Service__c.object-meta.xml
<CustomObject>
    <label>Single Number Service</label>
    <nameField>
        <displayFormat>SNS-{0000}</displayFormat>
        <label>Single Number Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Single Number Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>