main/default/objects/Single_Number_Service__c/fields/Does_the_last_line_have_Call_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Does_the_last_line_have_Call_Waiting__c</fullName>
    <label>Does the last line have Call Waiting?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SNS_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>