main/default/objects/Single_Number_Service__c/fields/SNS_Type__c.field-meta.xml
<CustomField>
    <fullName>SNS_Type__c</fullName>
    <inlineHelpText>Simultaneous Ring - Up to 1 number
Sequential Ring - Up to 2 numbers</inlineHelpText>
    <label>SNS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simultaneous Ring</fullName>
            </value>
            <value>
                <fullName>Sequential Ring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>