main/default/objects/Single_Number_Service__c/fields/Tel_Num_2__c.field-meta.xml
<CustomField>
    <fullName>Tel_Num_2__c</fullName>
    <label>Tel. Num 2</label>
    <type>Phone</type>
</CustomField>